--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,10 +2,10 @@
 <!-- @@include('blocks/mobile-nav.html') -->
 <main>
 	@@include('blocks/features.html')
-	@@include('blocks/menu.html')
-	@@include('blocks/aboutUs.html')
-	@@include('blocks/reviews.html')
-	@@include('blocks/map.html')
+	<!-- @@include('blocks/menu.html') -->
+	<!-- @@include('blocks/aboutUs.html') -->
+	<!-- @@include('blocks/reviews.html') -->
+	<!-- @@include('blocks/map.html') -->
 </main>
 
 <!-- <picture>
@@ -33,7 +33,7 @@
 
 
 
-@@include('blocks/footer/footer.html')
+<!-- @@include('blocks/footer/footer.html') -->
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
