--- a/src/html/blocks/features.html
+++ b/src/html/blocks/features.html
@@ -68,8 +68,9 @@
 			</div>
 
 
-@@include("glich1.html")
+<!-- @@include("glich1.html") -->
 @@include("glich2.html")
+@@include("cube.html")
 
 
 
