--- a/src/html/blocks/parallax-g.html
+++ b/src/html/blocks/parallax-g.html
@@ -1,6 +1,6 @@
 <h1 class="parallax-g-title">Welcome to Parallax-G</h1>
 <div class="parallax-g-wrapper">
-	<div class="parallax-g-far parallax-g-bg"></div>
-	<div class="parallax-g-middle parallax-g-bg"></div>
-	<div class="parallax-g-close parallax-g-bg"></div>
+	<div data-speed-parallax="10" class="parallax-g-far parallax-g-bg"></div>
+	<div data-speed-parallax="50" class="parallax-g-middle parallax-g-bg"></div>
+	<div data-speed-parallax="100" class="parallax-g-close parallax-g-bg"></div>
 </div>
