--- a/src/html/blocks/animations.html
+++ b/src/html/blocks/animations.html
@@ -3,4 +3,4 @@
 <!-- @@include("glich1.html") -->
 <!-- @@include("glich2.html") -->
 <!-- @@include("cube.html") -->
-@@include("parallax-g.html")
+<!-- @@include("parallax-g.html") -->
