--- a/src/html/blocks/animations.html
+++ b/src/html/blocks/animations.html
@@ -4,3 +4,4 @@
 <!-- @@include("glich2.html") -->
 <!-- @@include("cube.html") -->
 <!-- @@include("parallax-g.html") -->
+@@include("parallax-v.html")
