--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="body">
-	<header class="header">
+	<!-- <header class="header">
 
 		<div class="header__inner">
 			@@include('header-slider.html')
@@ -115,4 +115,4 @@
 
 		</div>
 
-	</header>
+	</header> -->
