--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <!-- @@include('blocks/mobile-nav.html') -->
 <main>
 	@@include('blocks/features.html')
-	<!-- @@include('blocks/menu.html') -->
+	@@include('blocks/menu.html')
 	<!-- @@include('blocks/aboutUs.html') -->
 	<!-- @@include('blocks/reviews.html') -->
 	<!-- @@include('blocks/map.html') -->
