--- a/src/html/blocks/animations.html
+++ b/src/html/blocks/animations.html
@@ -3,5 +3,5 @@
 <!-- @@include("glich1.html") -->
 <!-- @@include("glich2.html") -->
 <!-- @@include("cube.html") -->
-<!-- @@include("parallax-g.html") -->
+@@include("parallax-g.html")
 @@include("parallax-v.html")
